easyjson and s3 and tests
