# internal/app/sqlrequests/sqlrequests.go
@@ -1,7 +1,11 @@
 package sqlrequests
 
+const SearchHotelsPostgreRequest = "WHERE (name % $1 or location % $1 or name LIKE '%' || $1 || '%' or location LIKE '%' || $1 || '%')"
+
+const GetCommentsCountPostgreRequest = "SELECT comm_count FROM hotels WHERE hotel_id = $1"
+
 const GetCommentsPostgreRequest = "SELECT us.user_id,comm_id,message,rating,avatar,username,comm.hotel_id,time FROM comments as comm " +
-	"INNER JOIN users as us on us.user_id = comm.user_id WHERE comm.hotel_id = $1  LIMIT 4 OFFSET $2"
+	"INNER JOIN users as us on us.user_id = comm.user_id WHERE comm.hotel_id = $3  LIMIT $2 OFFSET $1"
 
 const AddCommentsPostgreRequest = "INSERT INTO comments VALUES (default, $1, $2,$3,$4) RETURNING comm_id,time"
 
@@ -9,11 +13,11 @@ const DeleteCommentsPostgreRequest = "DELETE FROM comments WHERE comm_id=$1"
 
 const UpdateCommentsPostgreRequest = "UPDATE comments SET message=$2,rating=$3 WHERE comm_id=$1 RETURNING time"
 
-const GetHotelsPostgreRequest = "SELECT hotel_id,name,description,img,location,curr_rating FROM hotels LIMIT 4 OFFSET $1"
+const GetHotelsPostgreRequest = "SELECT hotel_id,name,description,concat($2::varchar,img),location,curr_rating FROM hotels LIMIT 4 OFFSET $1"
 
-const GetHotelByIDPostgreRequest = "SELECT hotel_id,name,description,img,location,curr_rating,comm_count FROM hotels WHERE hotel_id=$1"
+const GetHotelByIDPostgreRequest = "SELECT hotel_id,name,description,concat($2::varchar,img),location,curr_rating,comm_count FROM hotels WHERE hotel_id=$1 GROUP BY hotel_id"
 
-const GetHotelsPhotosPostgreRequest = "SELECT unnest(photos) FROM hotels WHERE hotel_id=$1"
+const GetHotelsPhotosPostgreRequest = "SELECT concat($2::varchar,unnest(photos)) FROM hotels WHERE hotel_id=$1"
 
 const UpdateHotelRatingPostgreRequest = "UPDATE hotels SET curr_rating=$1 where hotel_id = $2"
 
